--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # NEXT_PUBLIC_BASE_API = 'http://localhost:3001'
-NEXT_PUBLIC_BASE_API = 'http://ecom.thirstymart.in'
+NEXT_PUBLIC_BASE_API = 'https://ecom.thirstymart.in'
