--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@next/env": "^14.2.14",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -21,13 +23,16 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
